--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* THIS FILE IS JUST FOR EXAMPLES, DELETE IT IF YOU DON'T NEED IT */
 
 /* SHELL ---------------------------------------- */
