src: apply bp for all scss files

--- a/src/styles/sass/_buttons.scss
+++ b/src/styles/sass/_buttons.scss
@@ -1,1 +1,29 @@
 @charset "UTF-8";
+
+a.button,
+button {
+  background: var(--qwik-light-blue);
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+  font-size: 0.8rem;
+  padding: 15px 20px;
+  text-align: center;
+
+  &.button-dark {
+    background: var(--qwik-dirty-black);
+  }
+
+  &.button-small {
+    padding: 15px 25px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+	a.button,
+	button {
+		font-size: 1rem;
+		padding: 23px 35px;
+	}
+}
