--- a/src/components/starter/header/header.module.scss
+++ b/src/components/starter/header/header.module.scss
@@ -1,42 +1,45 @@
 @charset "UTF-8";
 
 .wrapper {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
-	display: inline-block;
-}
-.logo a {
-	display: block;
+  display: inline-block;
+
+  a {
+    display: block;
+  }
 }
 
-.header ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: flex;
-	gap: 30px;
-}
+.header {
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: 30px;
+  }
 
-.header li {
-	display: none;
-	margin: 0;
-	padding: 0;
-	font-size: 0.7rem;
-}
+  li {
+    display: none;
+    margin: 0;
+    padding: 0;
+    font-size: 0.7rem;
 
-.header li a {
-	color: white;
-	display: inline-block;
-	padding: 0;
-	text-decoration: none;
-}
+    a {
+      color: white;
+      display: inline-block;
+      padding: 0;
+      text-decoration: none;
 
-.header li a:hover {
-	color: var(--qwik-light-blue);
+      &:hover {
+        color: var(--qwik-light-blue);
+      }
+    }
+  }
 }
 
 @media (min-width: 450px) {
