--- a/src/styles/sass/_layout.scss
+++ b/src/styles/sass/_layout.scss
@@ -1,1 +1,37 @@
 @charset "UTF-8";
+
+.container {
+  margin: 0 auto;
+  padding: 30px 40px;
+
+  &.container-purple {
+    background: var(--qwik-light-purple);
+  }
+
+  &.container-dark {
+    background: var(--qwik-dark-background);
+    color: var(--qwik-dark-text);
+  }
+
+  &.container-center {
+    text-align: center;
+  }
+
+  &.container-spacing-xl {
+    padding: 50px 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+	.container {
+		padding: 60px 80px;
+	}
+	.container.container-spacing-xl {
+		padding: 100px 60px;
+	}
+	.container.container-flex {
+		display: flex;
+		justify-content: center;
+		gap: 60px;
+	}
+}
