--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,8 @@
 @import "sass/_tags.scss";
 @import "sass/_typography.scss";
 
+// @import "tailwind.scss";
+
 /* ROOT ---------------------------------------- */
 :root {
 	--qwik-dark-blue: #006ce9;
