styles: add fadeInUp animation

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@import "sass/_animations.scss";
 @import "sass/_buttons.scss";
 @import "sass/_headings.scss";
 @import "sass/_layout.scss";
