components: fix nav font-size

--- a/src/components/starter/header/header.module.scss
+++ b/src/components/starter/header/header.module.scss
@@ -34,6 +34,7 @@
 			display: inline-block;
 			padding: 0;
 			text-decoration: none;
+			font-size: medium;
 
 			&:hover {
 				color: var(--qwik-light-blue);
