--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,6 @@
 @import "sass/_headings.scss";
 @import "sass/_layout.scss";
 @import "sass/_tags.scss";
-@import "sass/_typography.scss";
 
 // @import "tailwind.scss";
 
@@ -18,8 +17,7 @@
 	--qwik-dirty-black: #1d2033;
 	--qwik-dark-background: #151934;
 	--qwik-dark-text: #ffffff;
-	font-family: "Quicksand", Inter, system-ui, Avenir, Helvetica, Arial,
-		sans-serif;
+  font-family: "Overpass Variable", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	color: #333;
 }
 
