--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,8 @@
 	--qwik-dirty-black: #1d2033;
 	--qwik-dark-background: #151934;
 	--qwik-dark-text: #ffffff;
-  font-family: "Overpass Variable", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: "Overpass Variable", Inter, system-ui, Avenir, Helvetica, Arial,
+		sans-serif;
 	color: #333;
 }
 
