--- a/src/styles/sass/_typography.scss
+++ b/src/styles/sass/_typography.scss
@@ -2,8 +2,7 @@
 
 @font-face {
 	font-family: "Quicksand";
-	src: url("/fonts/Quicksand-VariableFont_wght.ttf")
-		format("truetype");
+	src: url("/fonts/Quicksand-VariableFont_wght.ttf") format("truetype");
 	font-weight: 100 700;
 	font-display: swap;
 }
