--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,7 +12,7 @@
 :root {
 	--qwik-dark-blue: #006ce9;
 	--qwik-light-blue: #18b6f6;
-	--qwik-light-purple: #8D52F4;
+	--qwik-light-purple: #8d52f4;
 	--qwik-dark-purple: #752df0;
 	--qwik-dirty-black: #1d2033;
 	--qwik-dark-background: #151934;
